option java_package = "com.ziften.server.protocol.message";
option java_outer_classname = "ZFlowMessage";

message ZFlow {
  	optional int64 timeStamp = 1;
    optional string agentGUID = 2;
	optional int32 protocolIdentifier = 3;
	optional bytes sourceIPv4Address  = 4;
	optional int32 sourceTransportPort  = 5;
	optional bytes destinationIPv4Address  = 6;
	optional int32 destinationTransportPort  = 7;
	optional int64 octetDeltaCount  = 8;
	optional int64 packetDeltaCount  = 9;
	optional int64 flowStartMilliseconds  = 10;
	optional int64 flowEndMilliseconds  = 11;
	optional int64 flowDirection  = 12;
	optional string userName  = 13;
	optional string zflowAccount  = 14;
	optional int32 zflowPid  =  15;
	optional int32 zflowParentPid  = 16;
	optional string zflowImagePath  = 17;
	optional string zflowCommandLine  = 18;
	optional string zflowImageBaseFileName  = 19;
	optional string zflowMD5  = 20;
	optional bool zflowCantHash  = 21;
	optional string zflowVerVersionString =  22;
	optional string zflowVerCompanyName  = 23;
	optional string zflowVerFileDescription  = 24;
	optional string zflowVerProductName  = 25;
	optional string zflowVerInternalName  = 26;
	optional string zflowVerLegalCopyright  = 27;
	optional string zflowVerLegalTrademark  = 28;
	optional string zflowVerOriginalFilename  = 29;
	optional string zflowVerProductVersion  = 30;
	optional string flowVerFileTextVersion  = 31;
	optional string zflowVerProductTextVersion  = 32;
	optional string zflowParentImagePath = 33;
	optional string zflowParentImageBaseFileName  = 34;
	optional string zflowParentMD5  = 35;
	optional bool zflowParentCantHash  = 36;
	optional string zflowParentVerVersionString  = 37;
	optional string zflowParentVerCompanyName  = 38;
	optional string zflowParentVerFileDescription  = 39;
	optional string zflowParentVerProductName  = 40;
	optional string zflowParentVerInternalName  = 41;
	optional string zflowParentVerLegalCopyright  = 42;
	optional string zflowParentVerLegalTrademark  = 43;
	optional string zflowParentVerOriginalFilename  = 44;
	optional string zflowParentVerProductVersion  = 45;
	optional string zflowParentVerFileTextVersion  = 46;
	optional string zflowParentVerProductTextVersion  = 47;
	optional string zflowAgentGuid  = 48;
	optional string zflowMachineName  = 49;
	optional string zflowOSName  = 50;
	optional string zflowOSVersion  = 51;
}